themes/top-menu.css
/* ... */
    
    
    #searchTop{
    
        box-sizing: border-box;
        padding-top: 15px;
        padding-left: 15px;
        padding-right: 15px;
        padding-bottom: 15px;
        width: 320px;
        position: relative; 
        width:0%;
    }


    /*HEADER*/


    html {
        font-size: 10px;
        font-family: 'TradeGothicLTStd-BdCn20', Helvetica, Arial, sans-serif;
        scroll-behavior: smooth;
    }
    a {
        text-decoration: none;
    }

    
    /* Header section */
    #header {
        position: fixed;
        display: flex;
        z-index: 1000;
        left: 0;
        top: 0;
        width: 100vw;
        height: auto;
        background-color: #004C93;
        font-family: 'TradeGothicLTStd-BdCn20', Helvetica, Arial, sans-serif !important;

    }
    #header .header {
        min-height: 8vh;
        background-color: #004C93;
    }
    #header .nav-bar {
        display: flex;
        align-items: center;
        justify-content: space-between;
        width: 100%;
        height: 76.909px;
        background-color: #004C93;

    }
    #header .nav-list ul {
        list-style: none;
        position: absolute;
        background-color: #004C93;
        height: 100vh;
        left: 100%;
        top: 0;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        z-index: 1;
        overflow-x: hidden;
        transition: .5s ease left;
    }
    #header .nav-list ul.active {
        left: 0%;
    }
    #header .nav-list ul a {
        font-size: 2.5rem;
        font-weight: 500;
        letter-spacing: .2rem;
        text-decoration: none;
        color: white;
        text-transform: uppercase;
        padding: 20px;
        display: block;
    }
    #header .nav-list ul a::after {
        content: attr(data-after);
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%) scale(0);
        color: #004C93;
        font-size: 13rem;
        letter-spacing: 50px;
        z-index: -1;
        transition: .3s ease letter-spacing;
    }
    #header .nav-list ul li:hover a::after {
        transform: translate(-50%, -50%) scale(1);
        letter-spacing: initial;
    }
    #header .nav-list ul li:hover a {
        color: #edba32;
    }
    #header .hamburger {
        height: 60px;
        width: 60px;
        display: inline-block;
        border: 3px solid white;
        border-radius: 50%;
        position: relative;
        display: flex;
        align-items: center;
        justify-content: center;
        z-index: 100;
        cursor: pointer;
        transform: scale(.8);
        margin-right: 20px;
    }
    #header .hamburger:after {
        position: absolute;
        content: '';
        height: 100%;
        width: 100%;
        border-radius: 50%;
        border: 3px solid white;
        animation: hamburger_puls 1s ease infinite;
    }
    #header .hamburger .bar {
        height: 2px;
        width: 30px;
        position: relative;
        background-color: white;
        z-index: -1;
    }
    #header .hamburger .bar::after,
    #header .hamburger .bar::before {
        content: '';
        position: absolute;
        height: 100%;
        width: 100%;
        left: 0;
        background-color: white;
        transition: .3s ease;
        transition-property: top, bottom;
    }
    #header .hamburger .bar::after {
        top: 8px;
    }
    #header .hamburger .bar::before {
        bottom: 8px;
    }
    #header .hamburger.active .bar::before {
        bottom: 0;
    }
    #header .hamburger.active .bar::after {
        top: 0;
    }
    /* End Header section */
      
    
   
    /* Media Query For Desktop */
    @media only screen and (min-width: 1200px) {
        /* header */
        #header .hamburger {
            display: none;
        }
        #header .nav-list ul {
            position: initial;
            display: block;
            float: right;
            height: auto;
        }
        #header .nav-list ul li {
            display: inline-block;
        }
        #header .nav-list ul li a {
            font-size: 1.8rem;
        }
        #header .nav-list ul a:after {
            display: none;
        }
        /* End header */
    
    }
    /* End  Media Query For Desktop */
    

